2012-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* jpeg: Updated to IJG 8d release.

	* libxml: Updated libxml to 2.8.0 release.

	* zlib: Updated zlib to 1.2.7 release.

	* magick/blob.c (MagickFileHandle): Refer to stdio, bzip2, and
	gzip file handles using their own type.  Eliminates warnings
	observed when compiling with zlib 1.2.7.

	* tiff: Updated libtiff to 4.0.2 release.

	* png: Updated libpng to 1.5.11 release.

2012-06-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix typo which caused the --without-lzma option to
	be handled incorrectly.  Resolves SourceForge issue 3535309
	"graphicsmagick from 1.3.13 to 1.3.15 has broken lzma support".

2012-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.c (main): Verify that we can 'ping' the file using
	PingImage().  Tests for some formats may take longer to complete.

	* tests/rwblob.c (main): Verify that we can 'ping' the blob using
	PingBlob().  Tests for some formats may take longer to complete.

	* coders/xbm.c (ReadXBMImage): Fix memory leak of temporary X
	bitmap image allocation encountered when reading in 'ping' mode.

	* magick/blob.c (PingBlob): Re-write to be based on BlobToImage()
	so that it works reliably.
	(BlobToImage): Restore original input file name to image if
	temporary file was used so that image 'filename' and
	'magick_filename' do not contain unexpected content due to using a
	temporary file.

2012-06-07  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 

	* coders/png.c: Disable new libpng-1.5.10 test for invalid palette
	index when reading a PNG or MNG (for speed), or when writing a MNG
	(because a zero-length PLTE is valid in a MNG).

2012-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (SetImageAttribute): Don't translate
	'comment' and 'label' attributes if the request is made while a
	file is being read.  This is a temporary workaround until there is