@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020120616"
-#define public MagickPackageReleaseDate "snapshot-20120616"
+#define public MagickPackageVersionAddendum ".020120621"
+#define public MagickPackageReleaseDate "snapshot-20120621"
